# mtg-similarcards

./: .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/config/: api_endpoints.py
database/: db.py
database/schemas/: cards.json
database/sql/create_tables/: cards.sql  sets.sql
database/sql/insert/: cards_insert.sql  example_insert.py
docs/runbooks/: database.md
postgres/sql/create_tables/: sets.sql
scripts/: cards_etl_test.py  sets_etl_test.py
src/app/: main.py
src/app/config/: api_endpoints.py  logging_config.py
src/database/: db.py
src/database/etl/: schema_validation.py  schemas.py  session_manager.py
src/database/etl/cards/: cards_retrieval_svc.py
src/database/etl/sets/: sets_etl.py  sets_retrieval_svc.py
src/database/schemas/: README.md  cards.json  cards_artifacts.json  cards_enchanment.json  cards_instants.json  cards_lands.json  cards_planeswalker.json  cards_sorcery.json  sets.json
src/database/sql/create_tables/: cards.sql  sets.sql
src/database/sql/insert/: cards_insert.sql  example_insert.py
src/database/sql/upsert/: cards_upsert.sql  example_upsert.py  sets_upsert.sql
tests/: test_api_endpoints.py  test_cards_retrieval_svc.py  test_schema_validation.py  test_sets_retrieval_svc.py
