[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mtg-similarcards"
version = "0.1.0"
description = "App for identifying similar mtg cards via vector embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
]
